<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="General">
        <EditTextPreference
            android:defaultValue="30"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_volume_muted_timeout"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_volume_muted_timeout_summary"
            android:title="@string/pref_volume_muted_timeout_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Small notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_small_show_music_mute"
            android:summary="@string/pref_small_show_music_mute_summary"
            android:title="@string/pref_small_show_music_mute_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_small_show_ring_mute"
            android:summary="@string/pref_small_show_ring_mute_summary"
            android:title="@string/pref_small_show_ring_mute_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_small_show_notifications_mute"
            android:summary="@string/pref_small_show_notifications_mute_summary"
            android:title="@string/pref_small_show_notifications_mute_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_small_show_volume_updown"
            android:summary="@string/pref_small_show_volume_updown_summary"
            android:title="@string/pref_small_show_volume_updown_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_small_show_volume_mute_with_timeout"
            android:summary="@string/pref_small_show_volume_mute_with_timeout_summary"
            android:title="@string/pref_small_show_volume_mute_with_timeout_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Expanded notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_big_enabled"
            android:summary="@string/pref_big_enabled_summary"
            android:title="@string/pref_big_enabled_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_big_show_music_volume"
            android:summary="@string/pref_big_show_music_volume_summary"
            android:title="@string/pref_big_show_music_volume_title"
            />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_big_show_ring_volume"
            android:summary="@string/pref_big_show_ring_volume_summary"
            android:title="@string/pref_big_show_ring_volume_title"
            />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_big_show_notifications_volume"
            android:summary="@string/pref_big_show_notifications_volume_summary"
            android:title="@string/pref_big_show_notifications_volume_title"
            />
    </PreferenceCategory>

</PreferenceScreen>
